--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,20 @@
 {
-	"manifest_version": 3,
-	"name": "web-annotator",
-	"version": "1.0",
-	"description": "Allows you to annotate on web pages",
-	"permissions": [
-		"contextMenus",
-		"scripting",
-		"storage",
-		"tabs"
-	],
-	"host_permissions": [
-		"<all_urls>"
-	],
-	"background": {
-		"service_worker": "background.js"
-	  },
-	"content_scripts": [
-		{
-			"matches": [
-				"<all_urls>"
-			],
-			"js": [
-				"content.js",
-				"popup.js"
-			],
-			"css": [
-				"styles.css"
-			]
-		}
-	],
-	"action": {
-		"default_popup": "popup.html",
-		"default_icon": "icons/icon.png"
-	},
-	"icons": {
-		"128": "icons/icon.png"
-	}
+  "manifest_version": 3,
+  "name": "web-annotator",
+  "version": "1.0",
+  "description": "Allows you to annotate on web pages",
+  "permissions": ["contextMenus", "scripting", "storage", "tabs"],
+  "host_permissions": ["<all_urls>"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js", "popup.js"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
